--- a/assets/scss/index.scss
+++ b/assets/scss/index.scss
@@ -5,13 +5,12 @@ html, body {
 	right: 0;
 	bottom: 0;
     overflow: hidden;
-    margin: 0 auto;
-	min-width: 300px;
-	max-width: 640px;
     overscroll-behavior-y: contain;
 	-webkit-tap-highlight-color: transparent;  /* 取消safari点击变暗效果 */
 }
-
+div {
+	box-sizing: border-box;
+}
 
 .eclipsis {
 	overflow: hidden; 
@@ -30,4 +29,13 @@ html, body {
 
 .grayed {
 	filter: grayscale(100%);
+}
+
+#__nuxt {
+    position: relative;
+	margin: 0 auto;
+	min-width: 300px;
+	max-width: 750px;
+	height: 100%;
+    overflow: hidden;
 }
